syntax = "proto3";

package com.github.dodo_cli.dodo_core.api.v1alpha1;

option go_package = "github.com/dodo-cli/dodo-core/api/v1alpha1";

import "api/v1alpha1/build.proto";

message Backdrop {
  string name = 1;
  repeated string aliases = 2;
  string container_name = 3;
  string image_id = 4;
  string runtime = 5;

  Entrypoint entrypoint = 6;

  repeated Environment environment = 7;
  repeated Volume volumes = 8;
  repeated Device devices = 9;
  repeated Port ports = 10;

  repeated string capabilities = 11;

  string user = 12;
  string working_dir = 13;

  com.github.dodo_cli.dodo_core.api.v1alpha1.BuildInfo build_info = 14;
}

message Entrypoint {
  bool interactive = 1;
  string script = 2;
  repeated string interpreter = 3;
  repeated string arguments = 4;
}

message Environment {
  string key = 1;
  string value = 2;
}

message Volume {
  string source = 1;
  string target = 2;
  bool readonly = 3;
}

message Device {
  string cgroup_rule = 1;
  string source = 2;
  string target = 3;
  string permissions = 4;
}

message Port {
  string target = 1;
  string published = 2;
  string protocol = 3;
  string host_ip = 4;
}
